--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /**
 * Importing necessary  Styles.
 **/
@@ -1090,7 +1089,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
 }
 .testimonial-section .main-container .item .wrapper .name img {
   width: 50px;
-  height: 50px;
+  height: auto;
   border-radius: 50%;
   position: absolute;
   top:0;
